<resources>
    <string name="app_name">RamadhanHadiatama_1202144104_Modul3</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="title_placeholder">Title</string>
    <string name="isi_placeholder">Isi</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
        vitae semper quam. In a metus ut nisl pharetra hendrerit et a leo. Curabitur nec sapien
        odio. Vestibulum a mollis felis. Cras molestie felis nibh, ut maximus mauris feugiat
        tincidunt. Curabitur ultricies eros sed ipsum pulvinar vehicula. Maecenas volutpat,
        massa sit amet aliquam eleifend, massa lorem tempor sapien, eget finibus massa dolor
        molestie lorem. Suspendisse at purus mauris. Proin nibh ligula, suscipit vel pharetra
        posuere, bibendum id lorem.</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="initial_count">initial count</string>

    <string-array name="water_titles">
        <item>Ades</item>
        <item>Amidis</item>
        <item>Aqua</item>
        <item>Cleo</item>
        <item>Club</item>
        <item>Equil</item>
        <item>Evian</item>
        <item>Leminerale</item>
        <item>Nestle</item>
        <item>Pristine</item>
        <item>Vit</item>
    </string-array>

    <string-array name="water_info">
        <item>Ini adalah air mineral merk Ades</item>
        <item>Ini adalah air mineral merk Amidis</item>
        <item>Ini adalah air mineral merk Aqua</item>
        <item>Ini adalah air mineral merk Cleo</item>
        <item>Ini adalah air mineral merk Club</item>
        <item>Ini adalah air mineral merk Equil</item>
        <item>Ini adalah air mineral merk Evian</item>
        <item>Ini adalah air mineral merk Leminerale</item>
        <item>Ini adalah air mineral merk Nestle</item>
        <item>Ini adalah air mineral merk Pristine</item>
        <item>Ini adalah air mineral merk Vit</item>
    </string-array>

    <array name="water_images">
        <item>@drawable/ades</item>
        <item>@drawable/amidis</item>
        <item>@drawable/aqua</item>
        <item>@drawable/cleo</item>
        <item>@drawable/club</item>
        <item>@drawable/equil</item>
        <item>@drawable/evian</item>
        <item>@drawable/leminerale</item>
        <item>@drawable/nestle</item>
        <item>@drawable/pristine</item>
        <item>@drawable/vit</item>
    </array>
</resources>
